tests/neg-macros/macros-in-same-project-1.scala

import scala.quoted._

object Bar {

  myMacro() // error

  inline def myMacro(): Unit = ${ aMacroImplementation }

  def aMacroImplementation(using QuoteContext): Expr[Unit] = '{}

}
